--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="assets/css/tingle.css" type="text/css" />
   <link rel="stylesheet" href="assets/css/snackbar.css" type="text/css" />
   <link rel="stylesheet" href="assets/css/dragable.css" type="text/css" />
+  <link rel="stylesheet" href="assets/css/mainButtons.css" type="text/css" />
   <script src="/assets/js/encoding-indexes.js" type="text/javascript"></script><!-- NEEDED FOR EDGE WITH GUN/SEA -->
   <script src="/assets/js/encoding.js" type="text/javascript"></script>
   <script src="https://polyfill.io/v3/polyfill.min.js?features=blissfuljs%2Cdefault%2Ces2015%2Ces2016%2Ces2017%2Ces2018%2Ces2019%2Ces5%2Ces6%2Ces7"></script>
@@ -67,14 +68,6 @@
         title="Toggle Screensharing">
       </button>
 
-      <button class="btn btn-sm rounded-0 btn-no-effect fa fa-video text-white" id="toggle-video"
-        title="Mute/Unmute Video">
-      </button>
-
-      <button class="btn btn-sm rounded-0 btn-no-effect fa fa-volume-up text-white" id="toggle-mute"
-        title="Mute/Unmute Audio">
-      </button>
-
       <button class="btn btn-sm text-white pull-right btn-no-effect fa fa-comment" title="Toggle Chat"
         id="toggle-chat-pane">
         <span class="badge badge-danger very-small font-weight-lighter" id="new-chat-notification" hidden>New</span>
@@ -98,12 +91,6 @@
 
       <button class="btn btn-sm rounded-0 btn-no-effect" id="toggle-modal" title="Room Settings">
         <i class="fa fa-cog text-white"></i>
-      </button>
-
-      <button class="btn btn-sm rounded-0 btn-no-effect text-white" title="Leave Room">
-        <a href="/" class="text-danger text-decoration-none">
-          <i class="fas fa-sign-out-alt text-white"></i>
-        </a>
       </button>
 
     </div>
@@ -155,6 +142,22 @@
     <ul id="dynamic-list" style="list-style-type:none ;margin-right: 3em;"></ul>
   </div>
   <div id="snackbar"></div>
+  <div class="floating" id="mainButtons">
+
+    <button class="btn sized accent btn-no-effect fa fa-video text-white" id="toggle-video"
+      title="Mute/Unmute Video">
+    </button>
+
+    <button class="btn sized accent btn-no-effect fa fa-microphone text-white" id="toggle-mute"
+      title="Mute/Unmute Audio">
+    </button>
+
+    <button class="btn sized danger btn-no-effect text-white right" title="Leave Room">
+      <a href="/" class="text-danger text-decoration-none">
+        <i class="fas fa-phone text-white"></i>
+      </a>
+    </button>
+  </div>
   <script src="assets/js/dragable.js"></script>
   <script type="text/javascript">
   window.addEventListener('DOMContentLoaded',function () {
